[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvivipet"
version = "0.1.0"
description = "Volumetric PET/CT viewer"
readme = "README.md"
authors = [{ name="Braams"}]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyvivipet = "pyvivipet.cli:main"
